# sparsebundle-fuse

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.in  README.md  configure.ac  mkfs.sparsebundle  mksparse  sparse-fuse.c  sparse-nbd.c  sparse.c
fuse/: Makefile.am  main.c
include/: sparsebundle.h
nbdkit-plugin/: Makefile.am  plugin.c
sparsebundle/: Makefile.am  sparsebundle.c  yxml.c
